# presentation-creator

./: .gitignore  pyproject.toml  requirements.txt
PresentationCreator/content_generation/: content_extractor.py  content_generator.py  content_summarizer.py
PresentationCreator/lib/network/: NetworkRequest.py
PresentationCreator/lib/network/chatsonic/: __init__.py  client.py  requests.py
PresentationCreator/lib/network/rest_interface/: NetworkApiClient.py  exceptions.py
PresentationCreator/presentation_generation/: combined_generator.py
PresentationCreator/test/content_generation/: content_extractor_test.py  content_generator_test.py  content_summarizer_test.py
PresentationCreator/test/presentation_generation/: combined_generator_test.py  presentation_generator_test.py
src/presgen/content_generation/: content_extractor.py  content_summarizer.py
src/presgen/lib/network/: NetworkRequest.py
src/presgen/presentation_generation/: combined_generator.py  presentation_generator.py
src/slidesgen/content_generation/: content_extractor.py  content_summarizer.py
src/slidesgen/content_generation/data/: content.py
src/slidesgen/content_generation/extractors/: __init__.py  file_content_extractor.py  pdf_extractor.py  pptx_extractor.py
src/slidesgen/content_generation/generators/: __init__.py  content_generator.py  extractor_based_generator.py  pdf_content_generator.py  (+1 more)
src/slidesgen/presentation_generation/: combined_generator.py  presentation_generator.py
tests/content_generation/: content_extractor_test.py  content_generator_test.py  content_summarizer_test.py
tests/content_generation/extractors/: pdf_extractor_test.py  pptx_extractor_test.py
tests/content_generation/generators/: content_summarizer_test.py  pdf_content_generator_test.py  pptx_content_generator_test.py
tests/presentation_generation/: combined_generator_test.py  presentation_generator_test.py
(+11 files in other folders)
